--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,5 +12,6 @@ google-auth==2.27.0
 google-auth-oauthlib==1.2.0
 pydantic==2.5.3
 pydantic-settings==2.1.0
+email-validator==2.1.0
 pgvector==0.2.5
 aiofiles==23.2.1
