mvp作成 claude code

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+# nak-base MVP 環境設定
+
 # PostgreSQL Settings
 POSTGRES_USER=nakbase
 POSTGRES_PASSWORD=nakbase_secret
@@ -5,10 +7,3 @@ POSTGRES_DB=nakbase
 
 # API Security
 SECRET_KEY=your-secret-key-change-in-production
-
-# Google Drive Settings
-# Google Drive のルートフォルダID（ゼミ共有フォルダ）
-GOOGLE_DRIVE_FOLDER_ID=your-google-drive-folder-id
-
-# Gemini API Key
-GEMINI_API_KEY=your-gemini-api-key
