--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
-  # PostgreSQL (MVP: 標準版、pgvectorなし)
+  # PostgreSQL with pgvector (Phase 1: RAG対応)
   db:
-    image: postgres:16-alpine
+    image: pgvector/pgvector:pg16
     container_name: nak_base_db
     environment:
       POSTGRES_USER: ${POSTGRES_USER:-nakbase}
