--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -137,8 +137,8 @@ services:
       NEXT_PUBLIC_API_URL: http://localhost:8000
     volumes:
       - ./frontend:/app
-      - /app/node_modules
-      - /app/.next
+      - frontend_node_modules:/app/node_modules
+      - frontend_next_build:/app/.next
     ports:
       - "3000:3000"
     depends_on:
@@ -152,6 +152,8 @@ volumes:
   redis_data:
   ollama_data:
   paper_storage:
+  frontend_node_modules:
+  frontend_next_build:
 
 networks:
   nak_network:
